# rbackup-cli

./: .gitignore  Cargo.toml
src/: commands.rs  config.rs  errors.rs  main.rs  utils.rs
src/connector/: mod.rs  structs.rs  upload.rs
