[package]
name = "rbackup-client-cli"
version = "0.1.0"
authors = ["Jan Kolena <jendakolena@gmail.com.com>"]
edition = "2018"

[dependencies]
dirs = "~2.0"
env_logger = "~0.7"
err-context = "~0.1"
err-derive = "~0.2"
futures = "~0.3"
hex = "~0.4"
chrono = { version = "~0.4", features = ["serde", "rustc-serialize"] }
log = "~0.4"
once_cell = "~1.3"
reqwest = { version = "~0.10", features = ["json", "stream"] }
rpassword = "~4.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
sha2 = "~0.8"
structopt = "~0.3"
tokio = { version = "~0.2", features = ["full"] }
toml = "~0.5"
uuid = { version = "~0.8", default-features = false, features = ["serde"] }
url = "~1"
url_serde = "~0.2"
